# agentrr

./: .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  contract.md  log-format.md  performance.md  replay-semantics.md  replay-worker-protocol.md  ui.md
docs/adapters/: anthropic.md  openai.md
docs/adr/: ADR-001-monorepo.md  ADR-002-write-before-return.md  ADR-003-no-fuzzy-match.md
examples/agents/: broken_replay_cases.py  deterministic_support.py  tool_caller.py  unstable_loop.py
examples/scratch/: README.md  poc_openai_record_replay.py
schemas/: event.v1.json  log-header.v1.json
tests/: conftest.py  test_credibility_gates.py  test_divergence.py  test_e2e_record_replay.py  test_entrypoint_header.py  test_entrypoint_main_fixup.py  test_log_roundtrip.py  test_recorder.py  test_replay_worker.py  test_run_index.py  test_ui_api.py
tests/durability/: test_write_before_return_sigkill.py
