[project]
name = "agentrr"
version = "0.1.0a1"
description = "Deterministic record-and-replay debugger for AI agent runs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "structlog>=24.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
agentrr = "agentrr_cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"packages/agentrr-core/src/agentrr_core" = "agentrr_core"
"packages/agentrr-recorder/src/agentrr_recorder" = "agentrr_recorder"
"packages/agentrr-sdk/src/agentrr_sdk" = "agentrr_sdk"
"packages/agentrr-replay/src/agentrr_replay" = "agentrr_replay"
"packages/agentrr-cli/src/agentrr_cli" = "agentrr_cli"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/packages/agentrr-core/src/agentrr_core",
    "/packages/agentrr-recorder/src/agentrr_recorder",
    "/packages/agentrr-sdk/src/agentrr_sdk",
    "/packages/agentrr-replay/src/agentrr_replay",
    "/packages/agentrr-cli/src/agentrr_cli",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "jsonschema>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
pythonpath = ["packages"]
markers = [
    "durability: write-before-return and SIGKILL gate tests",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = [
    "agentrr_core",
    "agentrr_recorder",
    "agentrr_sdk",
    "agentrr_replay",
    "agentrr_cli",
]
