[project]
name = "agentrr"
version = "0.1.0a2"
description = "Deterministic record-and-replay debugger for AI agent runs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["ai", "agents", "replay", "determinism", "debugging", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "structlog>=24.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
agentrr = "agentrr_cli.app:app"

[project.urls]
Homepage = "https://github.com/ip174/agentrr"
Documentation = "https://github.com/ip174/agentrr#readme"
Repository = "https://github.com/ip174/agentrr"
Issues = "https://github.com/ip174/agentrr/issues"
Changelog = "https://github.com/ip174/agentrr/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"packages/agentrr-core/src/agentrr_core" = "agentrr_core"
"packages/agentrr-recorder/src/agentrr_recorder" = "agentrr_recorder"
"packages/agentrr-sdk/src/agentrr_sdk" = "agentrr_sdk"
"packages/agentrr-replay/src/agentrr_replay" = "agentrr_replay"
"packages/agentrr-cli/src/agentrr_cli" = "agentrr_cli"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/packages/agentrr-core/src/agentrr_core",
    "/packages/agentrr-recorder/src/agentrr_recorder",
    "/packages/agentrr-sdk/src/agentrr_sdk",
    "/packages/agentrr-replay/src/agentrr_replay",
    "/packages/agentrr-cli/src/agentrr_cli",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "jsonschema>=4.0",
    "agentrr-ui",
    "httpx>=0.27",
]

[tool.uv.sources]
agentrr-ui = { path = "packages/agentrr-ui", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
pythonpath = ["packages"]
markers = [
    "durability: write-before-return and SIGKILL gate tests",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = [
    "agentrr_core",
    "agentrr_recorder",
    "agentrr_sdk",
    "agentrr_replay",
    "agentrr_cli",
]
